{
    "name": "GamePlayInput",
    "maps": [
        {
            "name": "KeyboardAndMouse",
            "id": "80c11fb3-0aca-4db3-b31e-a135381ff2ef",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "c6549ba5-c3db-4911-859f-36e0338dce08",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "8e118aff-73f0-4895-803b-42adfac40c38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1fede385-ef90-4690-817b-427c114ef8d9",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d91bac18-779c-45ba-b6ae-30de5ed6ff27",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TouchScreen",
            "id": "34931bb1-cf06-4859-91e7-2298ca2164b8",
            "actions": [
                {
                    "name": "TouchPos",
                    "type": "PassThrough",
                    "id": "3c4cbd4c-e545-4b3c-97fd-a53c5a27ac95",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "69f665bb-4bd7-446c-9157-9457ea4e3c37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "743c3a69-83b3-4152-a3c9-910dbf8cdfc1",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb747d5b-21e8-4517-9a49-719f935780d4",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}